--- a/sales.html
+++ b/sales.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-<header>
 
-</header>
+<head>
+
+</head>
 
 <body>
   <header></header>
   <main>
-    <h2></h2>
-    <a href="sales.html">Sales FIGS YO</a>
   </main>
   <footer>
   </footer>
-
+  <script src="js/app.js"></script>
 </body>
 
 </html>
