--- a/sales.html
+++ b/sales.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header></header>
   <main>
+    <h2>Bannanas</h2>
   </main>
   <footer>
   </footer>
