--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,7 @@
 <body>
   <header></header>
   <main>
-    <h2>Bannanas</h2>
+    <h2>Pat's Salmon Cookie Data</h2>
   </main>
   <footer>
   </footer>
