Added reset.css.  Completed HTML element build from wireframe

--- a/index.html
+++ b/index.html
@@ -1,18 +1,112 @@
 <!DOCTYPE html>
 <html>
-<header>
 
-</header>
+<head>
+  <title>Pat's Salmon Cookies</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
-  <header></header>
+  <header>
+    <img id="logo" src="https://via.placeholder.com/276x175" alt="Logo">
+    <h1>Pat's Salmon Cookies!</h1>
+  </header>
   <main>
+    <section>
+      <div>
+        <ul>
+          <li>Phone: </li>
+          <li>Email:</li>
+        </ul>
+      </div>
+      <div>
+        <img src="https://via.placeholder.com/787x246" alt="Logo">
+      </div>
+      <div>
+        <h3>Store Hours:</h3>
+        <h4>6am - 7pm</h4>
+        <h4>Monday - Sunday</h4>
+        <h4>365 Days a year!</h4>
+      </div>
+    </section>
+    <section>
+      <h2>We are <span>International</span>!</h3>
+        <div>
+          <h4>Seattle</h4>
+          <ul>
+            <li>1234 Pike St.</li>
+            <li>Seattle, WA 98101</li>
+            <li>USA</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Tokyo</h4>
+          <ul>
+            <li>368-1083, Hirono,</li>
+            <li>Kinokawa-shi, Wakayama</li>
+            <li>JAPAN</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Dubai</h4>
+          <ul>
+            <li>Office 1, Sh. Zayed Road</li>
+            <li>Dubai</li>
+            <li>United Arab Emirates</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Paris</h4>
+          <ul>
+            <li>52 Place de la Madeleine</li>
+            <li>Île-de-France</li>
+            <li>FRANCE</li>
+          </ul>
+
+        </div>
+        <div>
+          <h4>Lima</h4>
+          <ul>
+            <li>Av. Perú 2970 - SMP</li>
+            <li>PERU</li>
+          </ul>
+        </div>
+        <a href="sales.html" title="Sales Figures">Check Out Our Sales Figures!</a>
+
+    </section>
+    <section>
+      <h2>Meet Pat and Family</h2>
+      <img src="https://via.placeholder.com/852x480">
+      <p>Pat grew up in a small town just outside of the Seattle area. He was always welcomed home for a fun day of
+        fishing on the weekends with the smell of warm baked cookies. As Pat grew up he discoverd his passion for
+        baking, as well as his love of catching salmon. One day at the dinner table Pat set down his fork, looked at his
+        family and said, "Salmon Cookies!". The rest is history!</p>
+    </section>
+    <section>
+      <h2>Salmon Cookies you say!?</h2>
+      <p>That's right, <span>Salmon Cookies</span>! These are a one of a kind treat you are sure to love! Made from a
+        secret recipe developed of 10 years by Pat and his family. We know, the combination of Salmon and Cookies
+        doesn't sound that appetizing, but once you wrap your lips around these, you taste buds will scream for more.
+        Boy do we have more! Salmon Cookies are availible all over the world, and you can only get them is store!
+        Amazing!</p>
+      <img src="https://via.placeholder.com/282x250">
+    </section>
+    <section>
+      <h2>We have the Merch!</h2>
+      <img src="https://via.placeholder.com/324x324">
+      <img src="https://via.placeholder.com/483x183">
+      <img src="https://via.placeholder.com/300x300">
+      <p>Back by popular demand Pat's Salmon Cookie merchandise has returned and in an online store! Everyone wants a
+        T-shirt, right? Mark the occasion and show your support and pick up one of these amazing high-quality T-shirts!
+        Make your own Salmon cookies with this top grade, cookie cutter. Perhaps you want the <span>Chinook of
+          Mysterious Truths</span> you never know what wisdom this impressive sage will give out!</p>
+    </section>
 
     <a href="sales.html">Sales FIGS YO</a>
   </main>
   <footer>
   </footer>
-
 </body>
 
 </html>
