Added More CSS styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Pat's Salmon Cookies!</h1>
   </header>
   <main>
-    <section>
-      <div>
+    <section id="quick-bar">
+      <div id="contact-info">
         <ul>
           <li>Phone: </li>
           <li>Email:</li>
@@ -23,11 +23,11 @@
       <div>
         <img src="https://via.placeholder.com/787x246" alt="Logo">
       </div>
-      <div>
-        <h3>Store Hours:</h3>
-        <h4>6am - 7pm</h4>
-        <h4>Monday - Sunday</h4>
-        <h4>365 Days a year!</h4>
+      <div id="store-hours">
+        <h3 class="sh-txt">Store Hours:</h3>
+        <h4 class="sh-txt">6am - 7pm</h4>
+        <h4 class="sh-txt">Monday - Sunday</h4>
+        <h4 class="sh-txt">365 Days a year!</h4>
       </div>
     </section>
     <section>
