Updated CSS.  Added semantic tags to HTML

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <section id="quick-bar">
       <div id="contact-info">
         <ul>
-          <li>Phone: </li>
-          <li>Email:</li>
+          <li class="contact-head">Phone:</li>
+          <li>(555) 555-5555</li>
+          <li class="contact-head">Email:</li>
+          <li>salmoncookies@gmail.com</li>
         </ul>
       </div>
-      <div>
-        <img src="https://via.placeholder.com/787x246" alt="Logo">
-      </div>
+
+      <img src="https://via.placeholder.com/787x246" alt="Logo">
+
       <div id="store-hours">
         <h3 class="sh-txt">Store Hours:</h3>
         <h4 class="sh-txt">6am - 7pm</h4>
@@ -30,52 +32,54 @@
         <h4 class="sh-txt">365 Days a year!</h4>
       </div>
     </section>
-    <section>
-      <h2>We are <span>International</span>!</h3>
-        <div>
-          <h4>Seattle</h4>
-          <ul>
-            <li>1234 Pike St.</li>
-            <li>Seattle, WA 98101</li>
-            <li>USA</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Tokyo</h4>
-          <ul>
-            <li>368-1083, Hirono,</li>
-            <li>Kinokawa-shi, Wakayama</li>
-            <li>JAPAN</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Dubai</h4>
-          <ul>
-            <li>Office 1, Sh. Zayed Road</li>
-            <li>Dubai</li>
-            <li>United Arab Emirates</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Paris</h4>
-          <ul>
-            <li>52 Place de la Madeleine</li>
-            <li>Île-de-France</li>
-            <li>FRANCE</li>
-          </ul>
+    <section id="international-section">
+      <h2>We are International!</h2>
+      <div class="class1">
+        <h4>Seattle</h4>
+        <ul>
+          <li>1234 Pike St.</li>
+          <li>Seattle, WA 98101</li>
+          <li>USA</li>
+        </ul>
+      </div>
+      <div class="class1">
+        <h4>Tokyo</h4>
+        <ul>
+          <li>368-1083, Hirono,</li>
+          <li>Kinokawa-shi, Wakayama</li>
+          <li>JAPAN</li>
+        </ul>
+      </div>
+      <div class="class1">
+        <h4>Dubai</h4>
+        <ul>
+          <li>Office 1, Sh. Zayed Road</li>
+          <li>Dubai</li>
+          <li>United Arab Emirates</li>
+        </ul>
+      </div>
+      <div class="class1">
+        <h4>Paris</h4>
+        <ul>
+          <li>52 Place de la Madeleine</li>
+          <li>Île-de-France</li>
+          <li>FRANCE</li>
+        </ul>
 
-        </div>
-        <div>
-          <h4>Lima</h4>
-          <ul>
-            <li>Av. Perú 2970 - SMP</li>
-            <li>PERU</li>
-          </ul>
-        </div>
+      </div>
+      <div class="class1">
+        <h4>Lima</h4>
+        <ul>
+          <li>Av. Perú 2970 - SMP</li>
+          <li>3rd Block</li>
+          <li>PERU</li>
+        </ul>
+      </div>
+      <div id="checksales">
         <a href="sales.html" title="Sales Figures">Check Out Our Sales Figures!</a>
-
+      </div>
     </section>
-    <section>
+    <section id="meetpat">
       <h2>Meet Pat and Family</h2>
       <img src="https://via.placeholder.com/852x480">
       <p>Pat grew up in a small town just outside of the Seattle area. He was always welcomed home for a fun day of
@@ -83,7 +87,7 @@
         baking, as well as his love of catching salmon. One day at the dinner table Pat set down his fork, looked at his
         family and said, "Salmon Cookies!". The rest is history!</p>
     </section>
-    <section>
+    <section id="merchsection">
       <h2>Salmon Cookies you say!?</h2>
       <p>That's right, <span>Salmon Cookies</span>! These are a one of a kind treat you are sure to love! Made from a
         secret recipe developed of 10 years by Pat and his family. We know, the combination of Salmon and Cookies
@@ -92,18 +96,16 @@
         Amazing!</p>
       <img src="https://via.placeholder.com/282x250">
     </section>
-    <section>
+    <section id="themerch">
       <h2>We have the Merch!</h2>
       <img src="https://via.placeholder.com/324x324">
-      <img src="https://via.placeholder.com/483x183">
+      <img id="middleimg" src="https://via.placeholder.com/483x183">
       <img src="https://via.placeholder.com/300x300">
       <p>Back by popular demand Pat's Salmon Cookie merchandise has returned and in an online store! Everyone wants a
         T-shirt, right? Mark the occasion and show your support and pick up one of these amazing high-quality T-shirts!
         Make your own Salmon cookies with this top grade, cookie cutter. Perhaps you want the <span>Chinook of
           Mysterious Truths</span> you never know what wisdom this impressive sage will give out!</p>
     </section>
-
-    <a href="sales.html">Sales FIGS YO</a>
   </main>
   <footer>
   </footer>
