Completed initial CSS styling and added images on index.html.  Added return link on sales.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <img id="logo" src="https://via.placeholder.com/276x175" alt="Logo">
+    <img id="logo" src="img/frosted-cookie.jpg" alt="Logo">
     <h1>Pat's Salmon Cookies!</h1>
   </header>
   <main>
@@ -19,11 +19,11 @@
           <li class="contact-head">Phone:</li>
           <li>(555) 555-5555</li>
           <li class="contact-head">Email:</li>
-          <li>salmoncookies@gmail.com</li>
+          <li>salmoncookies@pscintl.com</li>
         </ul>
       </div>
 
-      <img src="https://via.placeholder.com/787x246" alt="Logo">
+      <img src="img/salmon.png" alt="Logo">
 
       <div id="store-hours">
         <h3 class="sh-txt">Store Hours:</h3>
@@ -81,7 +81,7 @@
     </section>
     <section id="meetpat">
       <h2>Meet Pat and Family</h2>
-      <img src="https://via.placeholder.com/852x480">
+      <img src="img/family.jpg">
       <p>Pat grew up in a small town just outside of the Seattle area. He was always welcomed home for a fun day of
         fishing on the weekends with the smell of warm baked cookies. As Pat grew up he discoverd his passion for
         baking, as well as his love of catching salmon. One day at the dinner table Pat set down his fork, looked at his
@@ -94,13 +94,13 @@
         doesn't sound that appetizing, but once you wrap your lips around these, you taste buds will scream for more.
         Boy do we have more! Salmon Cookies are availible all over the world, and you can only get them is store!
         Amazing!</p>
-      <img src="https://via.placeholder.com/282x250">
+      <img src="img/fish.jpg">
     </section>
     <section id="themerch">
       <h2>We have the Merch!</h2>
-      <img src="https://via.placeholder.com/324x324">
-      <img id="middleimg" src="https://via.placeholder.com/483x183">
-      <img src="https://via.placeholder.com/300x300">
+      <img src="img/shirt.jpg">
+      <img id="middleimg" src="img/chinook.jpg">
+      <img src="img/cutter.jpeg">
       <p>Back by popular demand Pat's Salmon Cookie merchandise has returned and in an online store! Everyone wants a
         T-shirt, right? Mark the occasion and show your support and pick up one of these amazing high-quality T-shirts!
         Make your own Salmon cookies with this top grade, cookie cutter. Perhaps you want the <span>Chinook of
@@ -108,6 +108,7 @@
     </section>
   </main>
   <footer>
+    <h3>(c) 2000-2020 Pat Salmon Cookies Intl</h3>
   </footer>
 </body>
 
