--- a/sales.html
+++ b/sales.html
@@ -13,6 +13,9 @@
   <footer>
   </footer>
   <script src="js/app.js"></script>
+  <div id="salesreturn">
+    <a href="index.html" title="Home">Back to Home</a>
+  </div>
 </body>
 
 </html>
