--- a/sales.html
+++ b/sales.html
@@ -9,13 +9,34 @@
   <header></header>
   <main>
     <h2>Pat's Salmon Cookie Data</h2>
+
+    <div id="salesreturn">
+      <a href="index.html" title="Home">Back to Home</a>
+    </div>
+    <section id="newStoreInput">
+      <h2>Enter Data for new store creation</h2>
+      <form id="addStoreLoc">
+        <fieldset>
+          <label>Enter New Store Location
+            <input id="storeLocationEntry" type='text' name='storelocation' />
+          </label>
+          <label>Enter Average Hourly Cookie Sales
+            <input id="avgCookieSales" type='text' name='avgCookiesSales' />
+          </label>
+          <label>Enter Minimum Expected Customers
+            <input id="minCustID" type='text' name='minCustomer' />
+          </label>
+          <label>Enter Maximum Expected Customers
+            <input id="maxCustID" type='text' name='maxCustomer' />
+          </label>
+        </fieldset>
+        <input type="submit" />
+      </form>
+    </section>
   </main>
-  <footer>
-  </footer>
-  <script src="js/app.js"></script>
-  <div id="salesreturn">
-    <a href="index.html" title="Home">Back to Home</a>
-  </div>
 </body>
+<footer>
+</footer>
+<script src="js/app.js"></script>
 
 </html>
