Completed CSS stylings

--- a/sales.html
+++ b/sales.html
@@ -14,7 +14,6 @@
       <a href="index.html" title="Home">Back to Home</a>
     </div>
     <section id="newStoreInput">
-      <h2>Enter Data for new store creation</h2>
       <form id="addStoreLoc">
         <fieldset>
           <label>Enter New Store Location
@@ -30,12 +29,16 @@
             <input id="maxCustID" type='text' name='maxCustomer' />
           </label>
         </fieldset>
-        <input type="submit" />
+        <div id="subButton">
+          <input type="submit" value="Unlock the Possibilities" />
+        </div>
       </form>
+      <h4>Want to franchise? Enter the data to see what could be!</h4>
     </section>
   </main>
 </body>
 <footer>
+  <h3>Things are looking up!</h3>
 </footer>
 <script src="js/app.js"></script>
 
