--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Pat's Salmon Cookies</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,15 +18,20 @@
     <section id="quick-bar">
       <div id="contact-info">
         <ul>
-          <li class="contact-head">Phone:</li>
-          <li>(555) 555-5555</li>
-          <li class="contact-head">Email:</li>
-          <li>salmoncookies@pscintl.com</li>
+          <div class="sepContact">
+            <li class="contact-head">Phone:</li>
+            <li>(555) 555-5555</li>
+          </div>
+          <div class="sepContact">
+            <li class="contact-head">Email:</li>
+            <li>salmoncookies@pscintl.com</li>
         </ul>
       </div>
+      </div>
 
-      <img src="img/salmon.png" alt="Logo">
-
+      <div id="salmonImage">
+        <img src="img/salmon.png" alt="Logo">
+      </div>
       <div id="store-hours">
         <h3 class="sh-txt">Store Hours:</h3>
         <h4 class="sh-txt">6am - 7pm</h4>
@@ -34,75 +41,97 @@
     </section>
     <section id="international-section">
       <h2>We are International!</h2>
-      <div class="class1">
-        <h4>Seattle</h4>
-        <ul>
-          <li>1234 Pike St.</li>
-          <li>Seattle, WA 98101</li>
-          <li>USA</li>
-        </ul>
-      </div>
-      <div class="class1">
-        <h4>Tokyo</h4>
-        <ul>
-          <li>368-1083, Hirono,</li>
-          <li>Kinokawa-shi, Wakayama</li>
-          <li>JAPAN</li>
-        </ul>
-      </div>
-      <div class="class1">
-        <h4>Dubai</h4>
-        <ul>
-          <li>Office 1, Sh. Zayed Road</li>
-          <li>Dubai</li>
-          <li>United Arab Emirates</li>
-        </ul>
-      </div>
-      <div class="class1">
-        <h4>Paris</h4>
-        <ul>
-          <li>52 Place de la Madeleine</li>
-          <li>Île-de-France</li>
-          <li>FRANCE</li>
-        </ul>
+      <div id="internationalLocations">
+        <div class="class1">
+          <h4>Seattle</h4>
+          <ul>
+            <li>1234 Pike St.</li>
+            <li>Seattle, WA 98101</li>
+            <li>USA</li>
+          </ul>
+        </div>
+        <div class="class1">
+          <h4>Tokyo</h4>
+          <ul>
+            <li>368-1083, Hirono,</li>
+            <li>Kinokawa-shi, Wakayama</li>
+            <li>JAPAN</li>
+          </ul>
+        </div>
+        <div class="class1">
+          <h4>Dubai</h4>
+          <ul>
+            <li>Office 1, Sh. Zayed Road</li>
+            <li>Dubai</li>
+            <li>United Arab Emirates</li>
+          </ul>
+        </div>
+        <div class="class1">
+          <h4>Paris</h4>
+          <ul>
+            <li>52 Place de la Madeleine</li>
+            <li>Île-de-France</li>
+            <li>FRANCE</li>
+          </ul>
 
-      </div>
-      <div class="class1">
-        <h4>Lima</h4>
-        <ul>
-          <li>Av. Perú 2970 - SMP</li>
-          <li>3rd Block</li>
-          <li>PERU</li>
-        </ul>
+        </div>
+        <div class="class1">
+          <h4>Lima</h4>
+          <ul>
+            <li>Av. Perú 2970 - SMP</li>
+            <li>3rd Block</li>
+            <li>PERU</li>
+          </ul>
+        </div>
       </div>
       <div id="checksales">
         <a href="sales.html" title="Sales Figures">Check Out Our Sales Figures!</a>
       </div>
     </section>
     <section id="meetpat">
-      <h2>Meet Pat and Family</h2>
-      <img src="img/family.jpg">
-      <p>Pat grew up in a small town just outside of the Seattle area. He was always welcomed home for a fun day of
-        fishing on the weekends with the smell of warm baked cookies. As Pat grew up he discoverd his passion for
-        baking, as well as his love of catching salmon. One day at the dinner table Pat set down his fork, looked at his
-        family and said, "Salmon Cookies!". The rest is history!</p>
+      <div id="meet-pat-header">
+        <h2>Meet Pat and Family</h2>
+      </div>
+      <div id="about-pat">
+        <div id="pat-fam-pic">
+          <img src="img/family.jpg">
+        </div>
+        <p>Pat grew up in a small town just outside of the Seattle area. He was always welcomed home for a fun day of
+          fishing on the weekends with the smell of warm baked cookies. As Pat grew up he discoverd his passion for
+          baking, as well as his love of catching salmon. One day at the dinner table Pat set down his fork, looked at
+          his
+          family and said, "Salmon Cookies!". The rest is history!</p>
+      </div>
     </section>
-    <section id="merchsection">
+    <section id="salmonyousay">
       <h2>Salmon Cookies you say!?</h2>
-      <p>That's right, <span>Salmon Cookies</span>! These are a one of a kind treat you are sure to love! Made from a
-        secret recipe developed of 10 years by Pat and his family. We know, the combination of Salmon and Cookies
-        doesn't sound that appetizing, but once you wrap your lips around these, you taste buds will scream for more.
-        Boy do we have more! Salmon Cookies are availible all over the world, and you can only get them is store!
-        Amazing!</p>
-      <img src="img/fish.jpg">
+      <div id="salmon-question">
+        <p>That's right, <span>Salmon Cookies</span>! These are a one of a kind treat you are sure to love! Made from a
+          secret recipe developed of 10 years by Pat and his family. We know, the combination of Salmon and Cookies
+          doesn't sound that appetizing, but once you wrap your lips around these, you taste buds will scream for more.
+          Boy do we have more! Salmon Cookies are availible all over the world, and you can only get them is store!
+          Amazing!</p>
+        <div id="salmonimage">
+          <img src="img/fish.jpg">
+        </div>
+      </div>
     </section>
     <section id="themerch">
       <h2>We have the Merch!</h2>
-      <img src="img/shirt.jpg">
-      <img id="middleimg" src="img/chinook.jpg">
-      <img src="img/cutter.jpeg">
+      <div id="merch-items">
+        <div>
+          <img src="img/shirt.jpg">
+        </div>
+        <div>
+          <img id="middleimg" src="img/chinook.jpg">
+        </div>
+        <div>
+          <img src="img/cutter.jpeg">
+        </div>
+      </div>
       <p>Back by popular demand Pat's Salmon Cookie merchandise has returned and in an online store! Everyone wants a
-        T-shirt, right? Mark the occasion and show your support and pick up one of these amazing high-quality T-shirts!
+        T-shirt, right? Mark the occasion and show your support and pick up one of these amazing high-quality
+        T-shirts!
         Make your own Salmon cookies with this top grade, cookie cutter. Perhaps you want the <span>Chinook of
           Mysterious Truths</span> you never know what wisdom this impressive sage will give out!</p>
     </section>
